--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
-asgiref==3.2.7
-certifi==2020.4.5.1
-chardet==3.0.4
+asgiref==3.4.1
+backports.zoneinfo==0.2.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.1.14
-djangorestframework==3.11.2
-drf-yasg==1.17.1
-idna==2.9
-inflection==0.4.0
+Django==4.0
+djangorestframework==3.13.1
+drf-yasg==1.20.0
+idna==3.3
+inflection==0.5.1
 itypes==1.2.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-openapi-codec==1.3.2
-packaging==20.4
-pyparsing==2.4.7
-pytz==2020.1
-PyYAML==5.4
-requests==2.23.0
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
-simplejson==3.17.0
-six==1.15.0
-sqlparse==0.3.1
-uritemplate==3.0.1
-urllib3==1.26.5
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+packaging==21.3
+pyparsing==3.0.6
+pytz==2021.3
+requests==2.26.0
+ruamel.yaml==0.17.19
+ruamel.yaml.clib==0.2.6
+six==1.16.0
+sqlparse==0.4.2
+uritemplate==4.1.1
+urllib3==1.26.7
