add mysql svc and deploy

--- a/k8s/secrets.yml
+++ b/k8s/secrets.yml
@@ -6,6 +6,7 @@ metadata:
 type: Opaque
 stringData:
   DATABASE_NAME: "ema"
-  DATABASE_USERNAME: "root"
   DATABASE_PASSWORD: "password"
   DATABASE_PORT: "32027"
+  DATABASE_USERNAME: "root"
+  DJANGO_SECRET_KEY: "@4&e(ylt=!_)(%s*5ewjz+apr4_5!yzlsm2cvsi6)3t!-)!qfn"
