--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 packaging==21.3
+psycopg2==2.9.3
 pyparsing==3.0.6
 pytz==2021.3
 requests==2.26.0
