--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,17 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+openapi-codec==1.3.2
 packaging==21.3
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyparsing==3.0.6
 pytz==2021.3
+PyYAML==6.0
 requests==2.26.0
 ruamel.yaml==0.17.19
 ruamel.yaml.clib==0.2.6
 six==1.16.0
 sqlparse==0.4.2
+tzdata==2021.5
 uritemplate==4.1.1
 urllib3==1.26.7
