--- a/k8s/ema.yml
+++ b/k8s/ema.yml
@@ -57,7 +57,7 @@ spec:
       initContainers:
       - args: 
         - "-c"
-        - "python3 manage.py migrate; python3 manage.py createsuperuser"
+        - "python3 manage.py makemigrations; python3 manage.py migrate"
         command: ["/bin/sh"]
         envFrom:
         - secretRef:
