--- a/k8s/ema.yml
+++ b/k8s/ema.yml
@@ -6,9 +6,13 @@ metadata:
 data:
   DJANGO_ALLOWED_HOSTS: "*"
   DJANGO_LOGLEVEL: "info"
-  DEBUG: "true"
-  DATABASE_ENGINE: "postgres"
+  DATABASE_ENGINE: "postgresql_psycopg2"
   DATABASE_HOST: "postgres.default.svc.cluster.local"
+  DATABASE_NAME: "ema"
+  DATABASE_PORT: "5432"
+  DEBUG: "true"
+  PGDATA: "/var/lib/postgresql/data/pgdata"
+  POSTGRES_NAME: "ema"
 
 ---
 apiVersion: v1
@@ -58,7 +62,7 @@ spec:
       - args: 
         - "-c"
         - "python3 manage.py makemigrations; python3 manage.py migrate"
-        command: ["/bin/sh"]
+        command: [ "/bin/sh" ]
         envFrom:
         - secretRef:
             name: ema-secrets
