Set ec2's correct authorized keys for kube user

--- a/infra/ansible/users.yml
+++ b/infra/ansible/users.yml
@@ -14,6 +14,7 @@
         validate: 'visudo -cf %s'
 
     - name: set up authorized keys for the kube user
-      authorized_key: user=kube key="{{item}}"
-      with_file:
-        - ~/.ssh/id_rsa.pub
+      authorized_key: 
+        user: kube 
+        key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/authorized_keys') }}"
+        state: present
