--- a/k8s/ema.yml
+++ b/k8s/ema.yml
@@ -71,3 +71,17 @@ spec:
         imagePullPolicy: Always
         name: django-migrate
 
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: ema
+spec:
+  maxReplicas: 10
+  minReplicas: 2
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: ema
+  targetCPUUtilizationPercentage: 50
+
