--- a/k8s/secrets.yml
+++ b/k8s/secrets.yml
@@ -7,7 +7,8 @@ type: Opaque
 stringData:
   DATABASE_NAME: "ema"
   DATABASE_PASSWORD: "postgres"
+  DATABASE_PORT: "30270"
   DATABASE_USERNAME: "postgres"
   DJANGO_SECRET_KEY: "@4&e(ylt=!_)(%s*5ewjz+apr4_5!yzlsm2cvsi6)3t!-)!qfn"
-  POSTGRES_PASSWORD: "postgres"
   POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "postgres"
